feat: Setting Prisma Module

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,9 +3,10 @@
   "trailingComma": "none",
   "arrowParens": "always",
   "bracketSpacing": true,
-  "endOfLine": "crlf",
+  "endOfLine": "lf",
   "printWidth": 120,
   "tabWidth": 2,
   "useTabs": true,
-  "semi": false
+  "semi": false,
+  "editorconfig": true
 }
