--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
 	},
 	"dependencies": {
 		"@nestjs/common": "^9.0.0",
+		"@nestjs/config": "^2.2.0",
 		"@nestjs/core": "^9.0.0",
 		"@nestjs/platform-express": "^9.0.0",
 		"@nestjs/sequelize": "^9.0.0",
+		"@nestjs/swagger": "^6.1.2",
 		"@prisma/client": "^4.4.0",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.13.2",
+		"dayjs": "^1.11.5",
 		"helmet": "^6.0.0",
 		"joi": "^17.6.2",
 		"reflect-metadata": "^0.1.13",
@@ -67,8 +70,12 @@
 			"ts"
 		],
 		"rootDir": "./src",
-		"modulePaths": ["<rootDir>"],
-		"moduleDirectories": ["node_modules"],
+		"modulePaths": [
+			"<rootDir>"
+		],
+		"moduleDirectories": [
+			"node_modules"
+		],
 		"testRegex": ".*\\.spec\\.ts$",
 		"transform": {
 			"^.+\\.(t|j)s$": "ts-jest"
