--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,11 @@
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
-		"esModuleInterop": true
-  }
+		"esModuleInterop": true,
+		"paths": {
+			"*": ["*"]
+		}
+  },
+	"include": ["src", "test"],
+	"exclude": ["node_modules", "build"]
 }
