chore: added author

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "aninotes-clean-architecture",
 	"version": "0.0.1",
 	"description": "",
-	"author": "",
+	"author": "JoshAlexis",
 	"private": true,
 	"license": "UNLICENSED",
 	"scripts": {
