--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"test:watch": "jest --watch",
 		"test:cov": "jest --coverage",
 		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-		"test:e2e": "jest --config ./test/jest-e2e.json --verbose"
+		"test:e2e": "jest --config ./test/jest-e2e.json --verbose",
+		"postinstall": "husky install"
 	},
 	"dependencies": {
 		"@nestjs/common": "^9.0.0",
@@ -35,6 +36,8 @@
 		"rxjs": "^7.2.0"
 	},
 	"devDependencies": {
+		"@commitlint/cli": "^17.2.0",
+		"@commitlint/config-conventional": "^17.2.0",
 		"@nestjs/cli": "^9.0.0",
 		"@nestjs/schematics": "^9.0.0",
 		"@nestjs/testing": "^9.0.0",
@@ -49,6 +52,7 @@
 		"eslint": "^8.0.1",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
+		"husky": "^8.0.2",
 		"jest": "28.1.3",
 		"prettier": "^2.3.2",
 		"prisma": "^4.4.0",
