--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI Test (UseCases)
+name: CI Test
 
 on:
   pull_request:
@@ -39,4 +39,7 @@ jobs:
       - run: yarn install
       - run: yarn build
       - run: npx prisma migrate deploy
-      - run: yarn test
+      - name: Run Use Cases
+        run: yarn test
+      - name: Run e2e
+        run: yarn test:e2e
