--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
 		"test:watch": "jest --watch",
 		"test:cov": "jest --coverage",
 		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-		"test:e2e": "jest --config ./test/jest-e2e.json --verbose",
-		"postinstall": "husky install"
+		"test:e2e": "jest --config ./test/jest-e2e.json --verbose"
 	},
 	"dependencies": {
 		"@nestjs/common": "^9.0.0",
@@ -47,6 +46,7 @@
 		"@types/node": "^16.0.0",
 		"@types/sequelize": "^4.28.14",
 		"@types/supertest": "^2.0.11",
+		"@types/uuid": "^9.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.0.0",
 		"@typescript-eslint/parser": "^5.52.0",
 		"eslint": "^8.0.1",
@@ -54,6 +54,7 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"husky": "^8.0.3",
 		"jest": "28.1.3",
+		"jest-mock-extended": "^3.0.2",
 		"prettier": "^2.8.4",
 		"prisma": "^4.10.1",
 		"source-map-support": "^0.5.20",
@@ -62,7 +63,8 @@
 		"ts-loader": "^9.4.2",
 		"ts-node": "^10.0.0",
 		"tsconfig-paths": "4.1.2",
-		"typescript": "^4.7.4"
+		"typescript": "^4.7.4",
+		"uuid": "^9.0.0"
 	},
 	"jest": {
 		"moduleFileExtensions": [
