fix: delete target branch for dependabot
- Added script for integration
with Doppler

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"build": "nest build",
 		"start": "nest start",
 		"start:dev": "nest start --watch",
+		"doppler:dev": "doppler run --forward-signals -- npm run start:dev",
 		"start:debug": "nest start --debug --watch",
 		"start:prod": "node dist/main",
 		"test": "jest --verbose",
