--- a/.github/workflows/rebase-dependencies.yml
+++ b/.github/workflows/rebase-dependencies.yml
@@ -10,7 +10,7 @@ jobs:
     name: Rebase `dependencies` with main
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@3
+      - uses: actions/checkout@v3
         with:
           fetch-depth: 0
           ref: dependencies
