ci: fix `package-ecosystem`

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@ updates:
       interval: "weekly"
     labels:
       - "actions"
-  - package-ecosystem: "yarn"
+  - package-ecosystem: "npm"
     target-branch: "dependencies"
     directory: "/"
     schedule:
