--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
 		"@nestjs/platform-express": "^9.4.0",
 		"@nestjs/swagger": "^6.3.0",
 		"@prisma/client": "^4.13.0",
+		"argon2": "^0.30.3",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.0",
-		"dayjs": "^1.11.5",
+		"dayjs": "^1.11.7",
 		"helmet": "^6.1.5",
 		"prisma": "^4.12.0",
 		"reflect-metadata": "^0.1.13",
