--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
   "trailingComma": "none",
   "arrowParens": "always",
   "bracketSpacing": true,
-  "endOfLine": "lf",
+  "endOfLine": "crlf",
   "printWidth": 120,
   "tabWidth": 2,
   "useTabs": true,
