--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ lerna-debug.log*
 # Yarn
 .yarn/*
 .yarn/cache
-!.yarn/install-state.gz
+.yarn/install-state.gz
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
