--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
 		"@nestjs/core": "^10.0.2",
 		"@nestjs/platform-express": "^10.0.5",
 		"@nestjs/swagger": "^7.1.1",
-		"@prisma/client": "^4.16.1",
+		"@prisma/client": "5.0.0",
 		"argon2": "^0.30.3",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.0",
 		"dayjs": "^1.11.8",
 		"helmet": "^7.0.0",
-		"prisma": "^5.0.0",
+		"prisma": "5.0.0",
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^5.0.1",
 		"rxjs": "^7.8.1"
